chore: suppress markdownlint in remaining worksheets

--- a/docs/quality/pattern-learning/J_2020_4.md
+++ b/docs/quality/pattern-learning/J_2020_4.md
@@ -1,9 +1,13 @@
+<!-- markdownlint-disable MD004 MD010 -->
+
 # J_2020_4
 
 ## 0. 原文（正本）
+
 - 参照: public/data/passages/1_passages-original/J_2020_4.txt
 
 ## 1. /分割
+
 - Becky: In our city, / we have a good zoo, Smile Zoo.
 - The zoo has some interesting events.
 - Let's visit the zoo together next Sunday.
@@ -36,6 +40,7 @@
 - So, / let's meet there / at seven fifty in the morning.
 
 ## 2. ()分割
+
 - Becky: < In our city >, we have a good zoo, Smile Zoo.
 - The zoo has some interesting events.
 - Let's visit the zoo together < next Sunday >.
@@ -68,104 +73,108 @@
 - So, let's meet there < at seven fifty in the morning >.
 
 ## 3. 直訳（フレーズ訳）
+
 - 英文: public/data/passages/3_passages-for-phrase-work/J_2020_4.txt
 - 日本語: public/data/passages/5_passages-for-phrase-work-ja/J_2020_4.txt（作成済み）
 
 ## 4. 一文訳
+
 - Becky: In our city, we have a good zoo, Smile Zoo.
-	ベッキー：私たちの市には、スマイル動物園という素晴らしい動物園があります。
+  ベッキー：私たちの市には、スマイル動物園という素晴らしい動物園があります。
 - The zoo has some interesting events.
-	その動物園ではいくつかの面白いイベントがあります。
+  その動物園ではいくつかの面白いイベントがあります。
 - Let's visit the zoo together next Sunday.
-	次の日曜日に一緒に動物園を訪れましょう。
+  次の日曜日に一緒に動物園を訪れましょう。
 - Eiji: Good!
-	エイジ：いいですね！
+  エイジ：いいですね！
 - I love elephants.
-	私は象が大好きです。
+  私は象が大好きです。
 - Are there any events with the elephants?
-	象と一緒のイベントはありますか？
+  象と一緒のイベントはありますか？
 - Becky: Yes.
-	ベッキー：はい。
+  ベッキー：はい。
 - This is a flyer of the zoo.
-	これは動物園のチラシです。
+  これは動物園のチラシです。
 - Look.
-	見て。
+  見て。
 - We can give food to them.
-	象に餌をあげることができます。
+  象に餌をあげることができます。
 - Eiji: Oh, that's wonderful.
-	エイジ：ああ、それは素晴らしい。
+  エイジ：ああ、それは素晴らしい。
 - It will start at eleven in the morning, and we can enjoy it for thirty minutes.
-	午前11時に始まって、30分間楽しむことができますね。
+  午前11時に始まって、30分間楽しむことができますね。
 - Becky: I'm looking forward to the event!
-	ベッキー：そのイベントを楽しみにしています！
+  ベッキー：そのイベントを楽しみにしています！
 - Well, I want to watch some animal families.
-	ところで、動物の家族を見たいです。
+  ところで、動物の家族を見たいです。
 - Eiji: Me, too.
-	エイジ：私もです。
+  エイジ：私もです。
 - Well, the zoo has two events to do that.
-	えっと、動物園にはそれができるイベントが2つあります。
+  えっと、動物園にはそれができるイベントが2つあります。
 - Becky: Right, but I can't join Night Safari because I have to go home by six.
-	ベッキー：そうですね。でも、ナイトサファリには参加できません。6時までに家に帰らないといけないからです。
+  ベッキー：そうですね。でも、ナイトサファリには参加できません。6時までに家に帰らないといけないからです。
 - Eiji: OK.
-	エイジ：わかりました。
+  エイジ：わかりました。
 - Then, let's join watching Pandas.
-	それなら、パンダウォッチングに参加しましょう。
+  それなら、パンダウォッチングに参加しましょう。
 - Oh, look.
-	ああ、見て。
+  ああ、見て。
 - We should take our student ID cards to the zoo and show them to the staff.
-	動物園に学生証を持って行って、スタッフに見せる必要がありますね。
+  動物園に学生証を持って行って、スタッフに見せる必要がありますね。
 - Becky: Yes.
-	ベッキー：はい。
+  ベッキー：はい。
 - We are fifteen years old.
-	私たちは15歳です。
+  私たちは15歳です。
 - So, if we do that, our entrance fee will be three dollars per person.
-	だから、そうすれば、入場料は一人3ドルになります。
+  だから、そうすれば、入場料は一人3ドルになります。
 - Eiji: That's great.
-	エイジ：それは素晴らしいですね。
+  エイジ：それは素晴らしいですね。
 - By the way, I have a question.
-	ところで、質問があります。
+  ところで、質問があります。
 - How will we go there?
-	どうやってそこに行きますか？
+  どうやってそこに行きますか？
 - Becky: By bus.
-	ベッキー：バスで。
+  ベッキー：バスで。
 - We'll take a bus at the bus stop in front of our school at eight.
-	学校の前のバス停で8時にバスに乗ります。
+  学校の前のバス停で8時にバスに乗ります。
 - So, let's meet there at seven fifty in the morning.
-	だから、朝7時50分にそこで待ち合わせましょう。
+  だから、朝7時50分にそこで待ち合わせましょう。
 
 ## 5. 語句分割
-- + Becky + In our city + we + have + a + good + zoo + Smile + Zoo .
-- + The + zoo + has + some + interesting + events .
-- + Let's + visit + the + zoo + together + next Sunday .
-- + Eiji + Good !
-- + I + love + elephants .
-- + Are + there + any + events + with the elephants ?
-- + Becky + Yes .
-- + This + is + a + flyer + of the zoo .
-- + Look .
-- + We + can + give food + to them .
-- + Eiji + Oh + that's + wonderful .
-- + It + will + start + at eleven in the morning + and + we + can + enjoy + it + for thirty minutes .
-- + Becky + I'm + looking forward to + the + event !
-- + Well + I + want + to + watch + some + animal + families .
-- + Eiji + Me + too .
-- + Well + the + zoo + has + two + events + to + do + that .
-- + Becky + Right + but + I + can't + join + Night + Safari + because + I + have to + go + home + by six .
-- + Eiji + OK .
-- + Then + let’s + join + watching + Pandas .
-- + Oh + look .
-- + We + should + take + our + student + ID + cards + to the zoo + and + show + them + to the staff .
-- + Becky + Yes .
-- + We + are + fifteen years old .
-- + So + if + we + do + that + our + entrance + fee + will + be + three dollars + per person .
-- + Eiji + That's + great .
-- + By the way + I + have + a + question .
-- + How + will + we + go + there ?
-- + Becky + By bus .
-- + We'll + take + a bus + at + the + bus + stop + in front of + our + school + at eight .
-- + So + let's + meet + there + at seven fifty in the morning .
+
+- - Becky + In our city + we + have + a + good + zoo + Smile + Zoo .
+- - The + zoo + has + some + interesting + events .
+- - Let's + visit + the + zoo + together + next Sunday .
+- - Eiji + Good !
+- - I + love + elephants .
+- - Are + there + any + events + with the elephants ?
+- - Becky + Yes .
+- - This + is + a + flyer + of the zoo .
+- - Look .
+- - We + can + give food + to them .
+- - Eiji + Oh + that's + wonderful .
+- - It + will + start + at eleven in the morning + and + we + can + enjoy + it + for thirty minutes .
+- - Becky + I'm + looking forward to + the + event !
+- - Well + I + want + to + watch + some + animal + families .
+- - Eiji + Me + too .
+- - Well + the + zoo + has + two + events + to + do + that .
+- - Becky + Right + but + I + can't + join + Night + Safari + because + I + have to + go + home + by six .
+- - Eiji + OK .
+- - Then + let’s + join + watching + Pandas .
+- - Oh + look .
+- - We + should + take + our + student + ID + cards + to the zoo + and + show + them + to the staff .
+- - Becky + Yes .
+- - We + are + fifteen years old .
+- - So + if + we + do + that + our + entrance + fee + will + be + three dollars + per person .
+- - Eiji + That's + great .
+- - By the way + I + have + a + question .
+- - How + will + we + go + there ?
+- - Becky + By bus .
+- - We'll + take + a bus + at + the + bus + stop + in front of + our + school + at eight .
+- - So + let's + meet + there + at seven fifty in the morning .
 
 ## 6. 重要な判断メモ
+
 - 原文の綴り揺れ/誤記を正本・phrase-workに反映済み。
 - "looking forward to" は熟語扱いで分割しない。
 - "give food" / "take a bus" / "in front of" / "by the way" は語句塊として扱う。
